--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,3 +35,22 @@ jobs:
         with:
           name: lutro-core
           path: lutro_libretro.dll
+  build_windows_jit:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: msys2/setup-msys2@v2
+        with:
+          msystem: MINGW64
+          update: true
+          install: make mingw-w64-x86_64-gcc
+      - name: build
+        shell: msys2 {0}
+        run: |
+          cd "${{ github.workspace }}"
+          make -j4 platform=win config=player WANT_JIT=1 
+      - name: Upload
+        uses: actions/upload-artifact@v4
+        with:
+          name: lutro-core-jit
+          path: lutro_libretro.dll
