build: apply recalbox patch for the arm build suited for recalbox

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: build
-        run: make -j4 config=player WANT_JIT=1
+        run: |
+          git apply -v recalbox-unzip-path.patch
+          make -j4 config=player WANT_JIT=1
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
